# gangorra

./: CMakeLists.txt  FreeRTOSConfig.h  Makefile  diagrama_de_troca_de_mensagem
drivers/: VL53L0X.cpp  i2c_sensors.cpp  kalman_filter.cpp  motor.cpp  mpu6050.cpp  tof.cpp
handlers/: control_handler.cpp  kalman_filter_handler.cpp  motor_handler.cpp  mpu6050_handler.cpp  serial.cpp  tof_handler.cpp
includes/: VL53L0X.hpp  control_handler.h  dataStructure.h  i2c_sensors.hpp  kalman_filter.h  kalman_filter_handler.h  message.hpp  motor.hpp  motor_handler.h  mpu6050.h  mpu6050.hpp  mpu6050_handler.h  serial.h  tof.h  tof.hpp  tof_handler.hpp
novo-esp32_ble/: platformio.ini
novo-esp32_ble/src/: BluetoothManager.cpp  BluetoothManager.hpp  GlobalVariables.hpp  JsonManager.cpp  JsonManager.hpp  UartManager.cpp  UartManager.hpp  driver_lcd_i2c.cpp  driver_lcd_i2c.hpp  gangorra.code-workspace  main.cpp
src/: PID_BALANCE_ARDUINO.cpp  main.cpp  message.cpp  teste.cpp  tof_main.cpp
